--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "expo-av": "~15.0.2"
   },
   "devDependencies": {
+    "@react-native-community/cli": "latest",
     "@babel/core": "^7.25.2",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
