--- a/app.json
+++ b/app.json
@@ -2,6 +2,7 @@
   "expo": {
     "name": "pokenative",
     "slug": "pokenative",
+    "icon": "./assets/images/icone.png",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
